crates/vue_oxlint_jsx/src/test/snapshots/ast/panic_interpolation_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/mod.rs
expression: result
---
=============== Program ===============
Program {
    span: Span {
        start: 0,
        end: 0,
    },
    node_id: Cell {
        value: NodeId(0),
    },
    scope_id: Cell {
        value: None,
    },
    source_text: "",
    comments: Vec(
        [],
    ),
    hashbang: None,
    directives: Vec(
        [],
    ),
    body: Vec(
        [],
    ),
    source_type: SourceType {
        language: JavaScript,
        module_kind: Script,
        variant: Standard,
        extension: None,
    },
}

===============  Error  ===============
[
    OxcDiagnostic {
        inner: OxcDiagnosticInner {
            message: "Interpolation end sign was not found.",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                95,
                            ),
                            length: 0,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            note: None,
            severity: Error,
            code: OxcCode {
                scope: None,
                number: None,
            },
            url: None,
        },
    },
]

=============== Codegen ===============


===============  Spans  ===============
