crates/vue_oxlint_jsx/src/test/snapshots/ast/pass_scripts_mapping_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/mod.rs
expression: result
---
=============== Program ===============
Program {
    span: Span {
        start: 0,
        end: 22,
    },
    node_id: Cell {
        value: NodeId(0),
    },
    scope_id: Cell {
        value: None,
    },
    source_text: "<script>\n1;\n</script>\n",
    comments: Vec(
        [],
    ),
    hashbang: None,
    directives: Vec(
        [],
    ),
    body: Vec(
        [
            ExpressionStatement(
                ExpressionStatement {
                    span: Span {
                        start: 9,
                        end: 11,
                    },
                    node_id: Cell {
                        value: NodeId(0),
                    },
                    expression: NumericLiteral(
                        NumericLiteral {
                            span: Span {
                                start: 9,
                                end: 10,
                            },
                            node_id: Cell {
                                value: NodeId(0),
                            },
                            base: Decimal,
                            raw: Some(
                                "1",
                            ),
                            value: 1.0,
                        },
                    ),
                },
            ),
            ExpressionStatement(
                ExpressionStatement {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    node_id: Cell {
                        value: NodeId(0),
                    },
                    expression: ArrowFunctionExpression(
                        ArrowFunctionExpression {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            node_id: Cell {
                                value: NodeId(0),
                            },
                            scope_id: Cell {
                                value: None,
                            },
                            type_parameters: None,
                            params: FormalParameters {
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                                node_id: Cell {
                                    value: NodeId(0),
                                },
                                kind: ArrowFormalParameters,
                                items: Vec(
                                    [],
                                ),
                                rest: None,
                            },
                            return_type: None,
                            body: FunctionBody {
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                                node_id: Cell {
                                    value: NodeId(0),
                                },
                                directives: Vec(
                                    [],
                                ),
                                statements: Vec(
                                    [
                                        ExpressionStatement(
                                            ExpressionStatement {
                                                span: Span {
                                                    start: 0,
                                                    end: 0,
                                                },
                                                node_id: Cell {
                                                    value: NodeId(0),
                                                },
                                                expression: JSXFragment(
                                                    JSXFragment {
                                                        span: Span {
                                                            start: 0,
                                                            end: 0,
                                                        },
                                                        node_id: Cell {
                                                            value: NodeId(0),
                                                        },
                                                        opening_fragment: JSXOpeningFragment {
                                                            span: Span {
                                                                start: 0,
                                                                end: 0,
                                                            },
                                                            node_id: Cell {
                                                                value: NodeId(0),
                                                            },
                                                        },
                                                        children: Vec(
                                                            [
                                                                Element(
                                                                    JSXElement {
                                                                        span: Span {
                                                                            start: 0,
                                                                            end: 21,
                                                                        },
                                                                        node_id: Cell {
                                                                            value: NodeId(0),
                                                                        },
                                                                        opening_element: JSXOpeningElement {
                                                                            span: Span {
                                                                                start: 0,
                                                                                end: 8,
                                                                            },
                                                                            node_id: Cell {
                                                                                value: NodeId(0),
                                                                            },
                                                                            name: Identifier(
                                                                                JSXIdentifier {
                                                                                    span: Span {
                                                                                        start: 1,
                                                                                        end: 7,
                                                                                    },
                                                                                    node_id: Cell {
                                                                                        value: NodeId(0),
                                                                                    },
                                                                                    name: "script",
                                                                                },
                                                                            ),
                                                                            type_arguments: None,
                                                                            attributes: Vec(
                                                                                [],
                                                                            ),
                                                                        },
                                                                        children: Vec(
                                                                            [],
                                                                        ),
                                                                        closing_element: Some(
                                                                            JSXClosingElement {
                                                                                span: Span {
                                                                                    start: 12,
                                                                                    end: 21,
                                                                                },
                                                                                node_id: Cell {
                                                                                    value: NodeId(0),
                                                                                },
                                                                                name: Identifier(
                                                                                    JSXIdentifier {
                                                                                        span: Span {
                                                                                            start: 14,
                                                                                            end: 20,
                                                                                        },
                                                                                        node_id: Cell {
                                                                                            value: NodeId(0),
                                                                                        },
                                                                                        name: "script",
                                                                                    },
                                                                                ),
                                                                            },
                                                                        ),
                                                                    },
                                                                ),
                                                            ],
                                                        ),
                                                        closing_fragment: JSXClosingFragment {
                                                            span: Span {
                                                                start: 0,
                                                                end: 0,
                                                            },
                                                            node_id: Cell {
                                                                value: NodeId(0),
                                                            },
                                                        },
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                ),
                            },
                            expression: false,
                            async: true,
                            pure: false,
                            pife: false,
                        },
                    ),
                },
            ),
        ],
    ),
    source_type: SourceType {
        language: JavaScript,
        module_kind: Unambiguous,
        variant: Jsx,
        extension: Some(
            Js,
        ),
    },
}

===============  Error  ===============
[]

=============== Codegen ===============
1;
async () => {
	<><script></script></>;
};


===============  Spans  ===============
Slice: "<script>\n1;\n</script>\n"; 
Span: (0, 22); 
Type: Program; 

Slice: "1;"; 
Span: (9, 11); 
Type: ExpressionStatement; 

Slice: "1"; 
Span: (9, 10); 
Type: NumericLiteral; 

Slice: "<script>\n1;\n</script>"; 
Span: (0, 21); 
Type: JSXElement; 

Slice: "<script>"; 
Span: (0, 8); 
Type: JSXOpeningElement; 

Slice: "script"; 
Span: (1, 7); 
Type: JSXIdentifier; 

Slice: "</script>"; 
Span: (12, 21); 
Type: JSXClosingElement; 

Slice: "script"; 
Span: (14, 20); 
Type: JSXIdentifier;
